[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Menu.png" type="Texture" id=1]
[ext_resource path="res://Main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/BurstShoot_Button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Coin.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ShopMenu.gd" type="Script" id=5]
[ext_resource path="res://Sprites/SingleShoot_Button.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ShotgunShoot_Button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Shield_Button.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Dash_Button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Grenade_Button.png" type="Texture" id=10]

[node name="ShopMenuCanvas" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ShopMenu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="NinePatchRect" parent="ShopMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -350.0
margin_right = 350.0
margin_bottom = 350.0
texture = ExtResource( 1 )
patch_margin_left = 52
patch_margin_top = 102
patch_margin_right = 52
patch_margin_bottom = 102
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="TabContainer" parent="ShopMenu/BackGround"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="Tabs" parent="ShopMenu/BackGround/Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 55.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Abilities" type="GridContainer" parent="ShopMenu/BackGround/Shop/Ability"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -90.0
margin_right = 140.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 180 )
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleShoot" type="Button" parent="ShopMenu/BackGround/Shop/Ability/Abilities"]
margin_right = 130.0
margin_bottom = 46.0
rect_min_size = Vector2( 130, 46 )
toggle_mode = true
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Ability/Abilities/SingleShoot"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 65.0
rect_min_size = Vector2( 116, 65 )
rect_scale = Vector2( 0.7, 0.7 )
text = "SINGLE"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="Button" parent="ShopMenu/BackGround/Shop/Ability/Abilities"]
margin_left = 150.0
margin_right = 280.0
margin_bottom = 46.0
rect_min_size = Vector2( 130, 46 )
toggle_mode = true
icon = ExtResource( 8 )
expand_icon = true

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Ability/Abilities/Shield"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 65.0
rect_min_size = Vector2( 116, 65 )
rect_scale = Vector2( 0.7, 0.7 )
text = "SHIELD"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BurstShoot" type="Button" parent="ShopMenu/BackGround/Shop/Ability/Abilities"]
margin_top = 66.0
margin_right = 130.0
margin_bottom = 112.0
rect_min_size = Vector2( 130, 46 )
toggle_mode = true
icon = ExtResource( 3 )
expand_icon = true

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Ability/Abilities/BurstShoot"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 65.0
rect_min_size = Vector2( 116, 65 )
rect_scale = Vector2( 0.7, 0.7 )
text = "BURST"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dash" type="Button" parent="ShopMenu/BackGround/Shop/Ability/Abilities"]
margin_left = 150.0
margin_top = 66.0
margin_right = 280.0
margin_bottom = 112.0
rect_min_size = Vector2( 130, 46 )
toggle_mode = true
icon = ExtResource( 9 )
expand_icon = true

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Ability/Abilities/Dash"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 65.0
rect_min_size = Vector2( 116, 65 )
rect_scale = Vector2( 0.7, 0.7 )
text = "DASH"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotgunShoot" type="Button" parent="ShopMenu/BackGround/Shop/Ability/Abilities"]
margin_top = 132.0
margin_right = 130.0
margin_bottom = 178.0
rect_min_size = Vector2( 130, 46 )
toggle_mode = true
icon = ExtResource( 7 )
expand_icon = true

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Ability/Abilities/ShotgunShoot"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 65.0
rect_min_size = Vector2( 116, 65 )
rect_scale = Vector2( 0.7, 0.7 )
text = "SHOTGUN"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grenade" type="Button" parent="ShopMenu/BackGround/Shop/Ability/Abilities"]
margin_left = 150.0
margin_top = 132.0
margin_right = 280.0
margin_bottom = 178.0
rect_min_size = Vector2( 130, 46 )
toggle_mode = true
icon = ExtResource( 10 )
expand_icon = true

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Ability/Abilities/Grenade"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 65.0
rect_min_size = Vector2( 116, 65 )
rect_scale = Vector2( 0.7, 0.7 )
text = "GRENADE"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Tabs" parent="ShopMenu/BackGround/Shop"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 55.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Upgrades" type="VBoxContainer" parent="ShopMenu/BackGround/Shop/Upgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -90.0
margin_right = 420.0
margin_bottom = 270.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUp" type="HBoxContainer" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades"]
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealthUp"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "HEALTH_UP"
valign = 1

[node name="LineEdit" type="LineEdit" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealthUp"]
margin_left = 200.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
text = "19000 -> 20000"
align = 1
editable = false

[node name="HealthUp" type="Button" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealthUp"]
margin_left = 440.0
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "99999"
icon = ExtResource( 4 )
expand_icon = true

[node name="SpeedUp" type="HBoxContainer" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades"]
margin_top = 74.0
margin_right = 560.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/SpeedUp"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "SPEED_UP"
valign = 1

[node name="LineEdit" type="LineEdit" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/SpeedUp"]
margin_left = 200.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
align = 1
editable = false

[node name="SpeedUp" type="Button" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/SpeedUp"]
margin_left = 440.0
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "99999"
icon = ExtResource( 4 )
expand_icon = true

[node name="DamageUp" type="HBoxContainer" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades"]
margin_top = 148.0
margin_right = 560.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/DamageUp"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "DAMAGE_UP"
valign = 1

[node name="LineEdit" type="LineEdit" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/DamageUp"]
margin_left = 200.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
align = 1
editable = false

[node name="DamageUp" type="Button" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/DamageUp"]
margin_left = 440.0
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "99999"
icon = ExtResource( 4 )
expand_icon = true

[node name="MoneyUp" type="HBoxContainer" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades"]
margin_top = 222.0
margin_right = 560.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/MoneyUp"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "MONEY_UP"
valign = 1

[node name="LineEdit" type="LineEdit" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/MoneyUp"]
margin_left = 200.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
align = 1
editable = false

[node name="MoneyUp" type="Button" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/MoneyUp"]
margin_left = 440.0
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "99999"
icon = ExtResource( 4 )
expand_icon = true

[node name="HealUp" type="HBoxContainer" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades"]
margin_top = 296.0
margin_right = 560.0
margin_bottom = 336.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealUp"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "HEAL_UP"
valign = 1

[node name="LineEdit" type="LineEdit" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealUp"]
margin_left = 200.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
align = 1
editable = false

[node name="HealUp" type="Button" parent="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealUp"]
margin_left = 440.0
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "99999"
icon = ExtResource( 4 )
expand_icon = true

[node name="Tools" type="HBoxContainer" parent="ShopMenu/BackGround"]
margin_left = 50.0
margin_top = 55.0
margin_right = 650.0
margin_bottom = 95.0
rect_min_size = Vector2( 600, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="ShopMenu/BackGround/Tools"]
margin_left = 3.0
margin_right = 473.0
margin_bottom = 40.0
rect_min_size = Vector2( 470, 40 )
custom_colors/font_color = Color( 1, 0.317647, 0.317647, 1 )
text = "EXIT_SHOP"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurMoney" type="Button" parent="ShopMenu/BackGround/Tools"]
margin_left = 476.0
margin_right = 596.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 1, 1, 0.392157, 1 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
disabled = true
text = "99999"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tab_changed" from="ShopMenu/BackGround/Shop" to="." method="_on_Shop_tab_changed"]
[connection signal="tab_changed" from="ShopMenu/BackGround/Shop/Ability" to="." method="_on_Ability_tab_changed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Ability/Abilities/SingleShoot" to="." method="_on_SingleShoot_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Ability/Abilities/SingleShoot" to="." method="_on_SingleShoot_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Ability/Abilities/Shield" to="." method="_on_Shield_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Ability/Abilities/Shield" to="." method="_on_Shield_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Ability/Abilities/BurstShoot" to="." method="_on_BurstShoot_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Ability/Abilities/BurstShoot" to="." method="_on_BurstShoot_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Ability/Abilities/Dash" to="." method="_on_Dash_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Ability/Abilities/Dash" to="." method="_on_Dash_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Ability/Abilities/ShotgunShoot" to="." method="_on_ShotgunShoot_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Ability/Abilities/ShotgunShoot" to="." method="_on_ShotgunShoot_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Ability/Abilities/Grenade" to="." method="_on_Grenade_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Ability/Abilities/Grenade" to="." method="_on_Grenade_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealthUp/HealthUp" to="." method="_on_HealthUp_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealthUp/HealthUp" to="." method="_on_HealthUp_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/SpeedUp/SpeedUp" to="." method="_on_SpeedUp_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/SpeedUp/SpeedUp" to="." method="_on_SpeedUp_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/DamageUp/DamageUp" to="." method="_on_DamageUp_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/DamageUp/DamageUp" to="." method="_on_DamageUp_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/MoneyUp/MoneyUp" to="." method="_on_MoneyUp_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/MoneyUp/MoneyUp" to="." method="_on_MoneyUp_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealUp/HealUp" to="." method="_on_HealUp_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Shop/Upgrade/Upgrades/HealUp/HealUp" to="." method="_on_HealUp_pressed"]
[connection signal="mouse_entered" from="ShopMenu/BackGround/Tools/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="ShopMenu/BackGround/Tools/Exit" to="." method="_on_Exit_pressed"]
